This file documents the revision history for the Monitoring Webinterface Thruk.

not yet released
          - Business Process
            - openend result spool files permissons

1.78     Thu Oct 21 22:41:31 CEST 2013
          - added business process addon
          - new --all-inclusive/-i mode for cli html page export which includes all css, js and
            images in one single page
          - show apache status in performance page
          - minemap performance improvements and reduced memory usage
          - configuration git browser got next and previous links
          - added some more shinken specific config attributes
          - memory usage / performance improvements with large data
          - replace caching module with internal module
          - panorama
            - added business process panel
            - added nagvis panel
          - Bug Fixes
            - summary: fixed reports using host/servicegroups in combination with the mysql logcache
            - mysql logcache: fixed service cannot be NULL error on import
            - fixed encoding problem when using config tool over http
          - Warning:
            - reports plugin is deprecated and will be removed soon, please update to reports2 plugin

1.76-3   Tue Sep  3 23:00:09 CEST 2013
          - new site 'collapsed' panel for large setups
          - Bug Fixes
            - dashboard: removed unnecessary dependency

1.76-2   Sun Aug 25 19:08:23 CEST 2013
          - Bug Fixes
            - fixed update on debian/ubuntu

1.76     Fri Aug 23 12:17:25 CEST 2013
          - new options to set page titles: 'use_bookmark_titles' and 'use_dynamic_titles' (awiddersheim)
          - make sure huge site panels do not overlap screen
          - support $PLUGINDIR$ and other user macros from resource file
          - added support for apache 2.4 on debian based systems
          - removed curl support, LWP::Protocol::Net::Curl wasn't thread safe
          - panorama